--- a/workflows/wrangle_data/clean_column_names.Rmd
+++ b/workflows/wrangle_data/clean_column_names.Rmd
@@ -1,6 +1,6 @@
 ## Clean column names
 
-You might have [read](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1890/0012-9623-90.2.205) that column names should not include spaces or special characters. Inevitably, you'll encounter data that are not so tidy. For example:
+You might have <a href = 'https://esajournals.onlinelibrary.wiley.com/doi/full/10.1890/0012-9623-90.2.205' target='_blank'>read</a>  that column names should not include spaces or special characters. Inevitably, you'll encounter data that are not so tidy. For example:
 
 ```{r echo = FALSE}
 df <- data.frame(`First Name` = c("Homer", "Marge", "Ned"),
