--- a/workflows/edit_data_packages/update_a_package.Rmd
+++ b/workflows/edit_data_packages/update_a_package.Rmd
@@ -2,7 +2,7 @@
 
 Once you have updated the data objects and saved the metadata to a file, we can update the metadata and add the new `pid` to the resource map using `publish_update()`.
 
-Make sure you have the package you want to update, [loaded into R](#get-package-and-eml) using `get_package()`.
+Make sure you have the package you want to update, <a href = 'https://nceas.github.io/datateam-training/reference/get-package-and-eml.html#get-package-and-eml' target='_blank'>loaded into R</a> using `get_package()`.
 
 ### Publish update
 
