--- a/workflows/edit_eml/edit_spatialdata.Rmd
+++ b/workflows/edit_eml/edit_spatialdata.Rmd
@@ -32,7 +32,7 @@ The coordinate system allow to work with spatial data using the same frame of re
 All latitudes and longitude coordinates should have a coordinate system (like a frame of reference). 
 
 
-There are horizontal coordinate systems (earth's surface) and vertical coordinate systems (depth). More information can be found [here](https://pro.arcgis.com/en/pro-app/help/mapping/properties/coordinate-systems-and-projections.htm).
+There are horizontal coordinate systems (earth's surface) and vertical coordinate systems (depth). More information can be found <a href = 'https://pro.arcgis.com/en/pro-app/help/mapping/properties/coordinate-systems-and-projections.htm' target='_blank'>here</a>.
 
 To find the `horizCoordSysName` you can use:
 
@@ -73,7 +73,7 @@ doc$dataset$spatialVector[[1]] <- spatialVector
 
 ### spatialRasters
 
-Most often these come in GeoTiff or Tiff files. The data is presented as a grid of "pixels". For more information ESRI has a indepth article [here](https://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm).
+Most often these come in GeoTiff or Tiff files. The data is presented as a grid of "pixels". For more information ESRI has a indepth article <a href = 'https://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm' target='_blank'>here</a>.
 
 To use the helper function get:
 
