--- a/workflows/pi_correspondence/email_templates_pi_faqs.Rmd
+++ b/workflows/pi_correspondence/email_templates_pi_faqs.Rmd
@@ -17,7 +17,7 @@ Possible Answer #3: The data package is still private and we accidentally failed
 
 > A: Prior to accepting large uploads, take the time to make sure there is enough space available and uploading all the files is necessary. 
 
->Can you upload the files to a drive we can access, such as Google Drive or Dropbox? Alternatively, if you have a publicly accessible FTP you can point us to, we could grab the files from there. If needed, we have a secure FTP you can access. Details are available here: https://help.nceas.ucsb.edu/remote_file_access. Please access our server at datateam.nceas.ucsb.edu with the username "visitor". Let us know if you would like to use our SFTP and we will send you the password and the path to which directory to upload to.
+>Can you upload the files to a drive we can access, such as Google Drive or Dropbox? Alternatively, if you have a publicly accessible FTP you can point us to, we could grab the files from there. If needed, we have a secure FTP you can access. Details are available here: <a href = 'https://help.nceas.ucsb.edu/remote_file_access' target='_blank'>https://help.nceas.ucsb.edu/remote_file_access</a> . Please access our server at datateam.nceas.ucsb.edu with the username "visitor". Let us know if you would like to use our SFTP and we will send you the password and the path to which directory to upload to.
 
 > If you have files to transfer to us that total several terabytes it may be best to arrange a shipment of an external hard drive.
 
@@ -39,12 +39,12 @@ Possible Answer #3: The data package is still private and we accidentally failed
 *Q: Can we submit model output?*
 
 > A: Yes you can submit your model output to the Arctic Data Center.  We also recommend including model source code directly in the dataset as it is critical to understand the model output dataset and will allow other researchers to re-produce your output.  If the model is complex or it's important to maintain file structure then it can submitted as a zip file.  We also recommend included a detailed readme file that documents: version information, licensing information, a list of software/hardware used in development, a list of software/hardware dependencies needed to run the software, information detailing source data for models, any mathematical/physical explanations needed to understand models, any methods used to evaluate models, and instructions how to run the model if not including in the source code as comments.  
-Please read our software submission guidelines for more detailed information: https://arcticdata.io/submit/#metadata-guidelines-for-software
+Please read our software submission guidelines for more detailed information: <a href = 'https://arcticdata.io/submit/#metadata-guidelines-for-software' target='_blank'>https://arcticdata.io/submit/#metadata-guidelines-for-software</a> 
 
 ### Access
 *Q: May another person (e.g. my student) submit data using my ORCID iD so that it is linked to me?*
 
-> A: We recommend instead that the student set up their own ORCiD account at https://ORCiD.org/register and submit data packages from that account. Submissions are processed by our team and, at that point, we can grant you full rights to the metadata and data files even though another person submitted them.
+> A: We recommend instead that the student set up their own ORCiD account at <a href = 'https://ORCiD.org/register' target='_blank'>https://ORCiD.org/register</a> and submit data packages from that account. Submissions are processed by our team and, at that point, we can grant you full rights to the metadata and data files even though another person submitted them.
 
 *Issue: Web form not cooperating.*  
 
@@ -63,7 +63,7 @@ Please read our software submission guidelines for more detailed information: ht
 
 - Try a different internet browser (Chrome, Firefox, Internet Explorer etc.)
 - Try clearing your cache and then re-logging in with orcid Id
-- Privacy blockers (like EFF's privacy badger https://www.eff.org/privacybadger) block the cookies needed for the login to work. To enable the cookies you need to disable your privacy tracker for arcticdata.io.
+- Privacy blockers (like EFF's privacy badger <a href = 'https://www.eff.org/privacybadger' target='_blank'>https://www.eff.org/privacybadger</a>) block the cookies needed for the login to work. To enable the cookies you need to disable your privacy tracker for arcticdata.io.
 
 > If the problem persists please let us know what step the error occured or if there were error messages you have recieved.
 
@@ -75,4 +75,4 @@ Please read our software submission guidelines for more detailed information: ht
 *Q: May I submit a non-NSF-funded data package?*  
 
 > A: Yes, you can submit non-NSF-funded Arctic data if you are willing to submit under the licensing terms of the Arctic Data Center (CC-0 or CC-BY), the data are moderately sized (with exact limits open to discussion), and a lot of support time to curate the submission is not required (i.e., you submit a complete metadata record and well formatted, open format data files).
-For larger data packages, we would likely need to charge a one-time archival fee which amortizes the long-term costs of preservation in a single payment. Also, please note that NSF-funded projects take priority when it comes to processing. Information on best practices for data and metadata organization is available here: https://arcticdata.io/submit/#organizing-your-data.
+For larger data packages, we would likely need to charge a one-time archival fee which amortizes the long-term costs of preservation in a single payment. Also, please note that NSF-funded projects take priority when it comes to processing. Information on best practices for data and metadata organization is available here: <a href = 'https://arcticdata.io/submit/#organizing-your-data' target='_blank'>https://arcticdata.io/submit/#organizing-your-data</a>.
