--- a/workflows/pi_correspondence/example_data_packages.Rmd
+++ b/workflows/pi_correspondence/example_data_packages.Rmd
@@ -3,26 +3,29 @@
 **Modeling**
 
 * Model with output:
-  + https://doi.org/10.18739/A24J09X55
+  + <a href = 'https://doi.org/10.18739/A24J09X55' target='_blank'>https://doi.org/10.18739/A24J09X55</a> 
 
 * Model code archived as a zip if preverving directory structure is important
-  + https://doi.org/10.18739/A2JS9H795
+  + <a href = 'https://doi.org/10.18739/A2JS9H795' target='_blank'>https://doi.org/10.18739/A2JS9H795</a> 
+
+* Model with provenance:
+  + <a href = 'https://arcticdata.io/catalog/view/doi%3A10.18739%2FA2WS8HM6C#urn%3Auuid%3Ae6390181-85e9-46a2-b2ba-e352ece51cc6' target='_blank'>https://arcticdata.io/catalog/view/doi%3A10.18739%2FA2WS8HM6C#urn%3Auuid%3Ae6390181-85e9-46a2-b2ba-e352ece51cc6</a>
 
 * Code and output:
   + **Note:** We can only archive the code if the submitter has the rights to redistribute it (like if they wrote it themselves, or if the code has a license that allows for that)
-  + https://doi.org/0.18739/A2XS5JH4N
+  + <a href = 'https://doi.org/10.18739/A2XS5JH4N' target='_blank'>https://doi.org/10.18739/A2XS5JH4N</a> 
 
 * Guidelines for large outputs:
-  + https://arcticdata.io/submit/#guidelines-for-large-models
+  + <a href = 'https://arcticdata.io/submit/#guidelines-for-large-models' target='_blank'>https://arcticdata.io/submit/#guidelines-for-large-models</a> 
 
 **Spatial data**
 
 * Vector
-    + https://doi.org/10.18739/A2TB0XV89
+    + <a href = 'https://doi.org/10.18739/A2TB0XV89' target='_blank'>https://doi.org/10.18739/A2TB0XV89</a> 
 * Raster
-    + https://doi.org/10.18739/A2GT5FG0B
+    + <a href = 'https://doi.org/10.18739/A2GT5FG0B' target='_blank'>https://doi.org/10.18739/A2GT5FG0B</a> 
 
 **Portals**
 
-* https://arcticdata.io/catalog/portals/DBO
-* https://arcticdata.io/catalog/portals/CALM
+* <a href = 'https://arcticdata.io/catalog/portals/DBO' target='_blank'>https://arcticdata.io/catalog/portals/DBO</a>
+* <a href = 'https://arcticdata.io/catalog/portals/CALM' target='_blank'>https://arcticdata.io/catalog/portals/CALM</a> 
