--- a/workflows/pi_correspondence/navigate_rt.Rmd
+++ b/workflows/pi_correspondence/navigate_rt.Rmd
@@ -1,6 +1,6 @@
 ## Navigate RT
 
-The [RT ticketing system](https://support.nceas.ucsb.edu/rt/) is how we
+The <a href = 'https://support.nceas.ucsb.edu/rt/' target='_blank'>RT ticketing system</a> is how we
 communicate with folks interacting with the Arctic Data Center.  
 We use it for managing submissions, accessing issues, etc. It consists of
 three separate interfaces:  
@@ -66,6 +66,6 @@ When notified by Arcticbot about a new data submission, here are the typical ste
 
 1. Update the Requestor under the People section based on the email given in the submission (usually the user/ PI/ `submitter`). You may have to google for the e-mail address if the PI did not include it in the metadata record.
 2. Take the ticket (Actions > Take)
-3. Review the submission based on the [checklist](https://nceas.github.io/datateam-training/reference/initial-review-checklist.html)
-4. Draft an email using the [template](https://nceas.github.io/datateam-training/reference/email-templates.html) and let others review it via Slack
+3. Review the submission based on the <a href = 'https://nceas.github.io/datateam-training/reference/initial-review-checklist.html' target='_blank'>checklist</a>
+4. Draft an email using the <a href = 'https://nceas.github.io/datateam-training/reference/email-templates.html' target='_blank'>template</a> and let others review it via Slack
 5. Send your reply via Actions
