--- a/workflows/solr_queries/query_solr_via_browser.Rmd
+++ b/workflows/solr_queries/query_solr_via_browser.Rmd
@@ -17,8 +17,8 @@ If I break it down into pieces, I get:
 
 Most of the time, you'll query either the Arctic Data Center member node or the `PROD` coordinating node, which have the following base URLs:
 
-- Arctic Data Center member node: https://arcticdata.io/metacat/d1/mn/v2/query/solr
-- `PROD` coordinating node: https://cn.dataone.org/cn/v2/query/solr
+- Arctic Data Center member node: <a href = 'https://arcticdata.io/metacat/d1/mn/v2/query/solr' target='_blank'>https://arcticdata.io/metacat/d1/mn/v2/query/solr</a> 
+- `PROD` coordinating node: <a href = 'https://cn.dataone.org/cn/v2/query/solr' target='_blank'>https://cn.dataone.org/cn/v2/query/solr</a>
 
 You can then append your query parameters to your base URL: 
 
