--- a/workflows/solr_queries/use_stats.Rmd
+++ b/workflows/solr_queries/use_stats.Rmd
@@ -1,8 +1,8 @@
 ## Use stats
 
-With stats, we can have [Solr calculate statistics](https://lucene.apache.org/solr/guide/7_3/the-stats-component.html#the-stats-component) on numerical values (such as `size`).
+With stats, we can have <a href = 'https://lucene.apache.org/solr/guide/7_3/the-stats-component.html#the-stats-component' target='_blank'>Solr calculate statistics</a> on numerical values (such as `size`).
 
-- https://arcticdata.io/metacat/d1/mn/v2/query/solr/?q=formatType:DATA&stats=true&stats.field=size&rows=0
+- <a href = 'https://arcticdata.io/metacat/d1/mn/v2/query/solr/?q=formatType:DATA&stats=true&stats.field=size&rows=0' target='_blank'>https://arcticdata.io/metacat/d1/mn/v2/query/solr/?q=formatType:DATA&stats=true&stats.field=size&rows=0</a>
 
 This query calculates a set of summary statistics for the `size` field on data objects that Solr has indexed.
 In this case, Solr's `size` field indexes the `size` field in the system metadata for each object in Metacat.
