--- a/reference/reference.Rmd
+++ b/reference/reference.Rmd
@@ -92,7 +92,7 @@ Solr is what's known as an index, which helps us keep track of the data, metadat
 
 Solr allows you to quickly search through any coordinating or member node. Some more common use-cases include:
 
-- **Recovering lost PIDs** - if you publish new data objects (<a href = 'https://nceas.github.io/datateam-training/training/create-data-packages-in-r.html#publish-an-object' target='_blank'>`publish_object`</a>) but forget to save the `PID`s, you can recover them with a query. For example, you can search for all data objects that are _not_ associated with a resource map _and_ are published using your ORCiD (`q=-resourceMap:*+AND+submitter:*XXXX-YYYY-ZZZZ-WWWW`)
+- **Recovering lost PIDs** - if you publish new data objects (<a href = 'https://nceas.github.io/datateam-training/reference/update-a-data-object.html' target='_blank'>`publish_object`</a>) but forget to save the `PID`s, you can recover them with a query. For example, you can search for all data objects that are _not_ associated with a resource map _and_ are published using your ORCiD (`q=-resourceMap:*+AND+submitter:*XXXX-YYYY-ZZZZ-WWWW`)
 - **Working with groups of packages** - if you want to find all data, metadata, and resource maps associated with a PI, you can use their last name (`q=origin:*SURNAME*`) or perhaps their ORCiD (`q=rightsHolder:*XXXX-YYYY-ZZZZ-WWWW`) or both (`q=origin:*SURNAME*+OR+rightsHolder:*XXXX-YYYY-ZZZZ-WWWW`) to retrieve information about packages associated with them
 
 Once you understand the logic of queries, it becomes a flexible and useful tool that you can integrate into your R workflow. You can use queries to answer a variety of interesting questions, for example: 
